Compile all C files in gnu89 mode.  Needed to build runtime library using clang (gnu89 is the gcc default).

--- a/klee/Makefile.common
+++ b/klee/Makefile.common
@@ -26,6 +26,9 @@ LLVMCC := $(LLVMGCC)
 LLVMCXX := $(LLVMGXX)
 endif
 
+# Needed to build runtime library using clang (gnu89 is the gcc default)
+C.Flags += -std=gnu89
+
 ifeq ($(ENABLE_EXT_STP),1)
   LD.Flags += -L$(STP_ROOT)/lib
   CXX.Flags += -I$(STP_ROOT)/include
