Add an XFAIL for a new testcase that crashes gcc but not dragonegg.

--- a/dragonegg/test/compilator/compilator-lit.cfg
+++ b/dragonegg/test/compilator/compilator-lit.cfg
@@ -53,6 +53,7 @@ config.xfails = [
 #    'gcc-testsuite/gcc.target/sparc/fpsub32s.c', # gcc-4.7 only
     'gcc-testsuite/g++.dg/torture/20120420-1.C',
     'gcc-testsuite/g++.dg/torture/pr53693.C',
+    'gcc-testsuite/gcc.dg/torture/pr53790.c',
 
     # GCC fails to inline an always_inline function and considers this an error.
     # We fail to inline it too, but don't consider this to be an error, which is
