GCC considers that failure to inline an always-inline function is an error, but we don't.

--- a/dragonegg/test/compilator/compilator-lit.cfg
+++ b/dragonegg/test/compilator/compilator-lit.cfg
@@ -61,6 +61,7 @@ config.xfails = [
 #    'gcc-testsuite/gcc.dg/lto/20090218-1_0.c', # gcc-4.7 only
 #    'gcc-testsuite/gcc.dg/always_inline2.c', # gcc-4.7 only
 #    'gcc-testsuite/gcc.dg/always_inline3.c', # gcc-4.7 only
+    'gcc-testsuite/c-c++-common/pr33763.c',
 
     # GCC rejects because a local variable is set to use a particular register
     # that doesn't exist.  We accept, never even noticing the problem because
