--- a/dragonegg/test/compilator/compilator-lit.cfg
+++ b/dragonegg/test/compilator/compilator-lit.cfg
@@ -495,6 +495,7 @@ config.xfails = [
     'clang-testsuite/CodeGen/func-return-member.c', # Not yet handled by ABI code
     'clang-testsuite/SemaCXX/PR10447.cpp', # multiple fns with same name and neither are external!
     'gcc-testsuite/gcc.target/i386/pr47564.c', # Per-function target options not supported
+    'gcc-testsuite/g++.dg/template/anonunion2.C', # Crash due to internal GCC bug
 ]
 
 # testFormat: The test format to use to interpret tests.
